<resources>
    <string name="app_name">PeleMele</string>
    <string name="photo">Photo</string>
    <string name="chronometre">Chronomètre</string>
    <string name="Bonjour">Bonjour</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="longitude_et_latitude">Longitude et Latitude</string>
    <string name="image">Image</string>
    <string name="meteo">Méteo</string>
    <string name="contact">Contact</string>
    <string name="capteur">Capteur</string>
    <string name="selection">Sélection</string>
    <string name="on_off">ON/OFF</string>
    <string name="textview">TextView</string>
    <string name="nom">Nom</string>
    <string name="num">Numéro</string>
    <string name="lancer">Lancer</string>
    <string name="activitéLongue">Activité longue</string>
    <string name="temperature">Température</string>
    <string name="ressenti">Ressenti</string>
    <string name="maximum">Maximum</string>
    <string name="pression">Pression</string>
    <string name="humidite">Humidité</string>
    <string name="quitter">Quitter</string>
    <string name="suspendre">Suspendre</string>
    <string name="temps">Temps</string>
    <string name="minimum">Minimum</string>
    <string name="activation">Activation</string>
    <string name="desactivation">Désactivation</string>
    <string name="Valeur">valeur</string>
    <string name="Accelerometre">Acceléromètre</string>
    <string name="Magnetometre">Magnétomètre</string>
    <string name="ville">Ville</string>
</resources>