<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MeteoActivity">

    <Button
            android:text="@string/temps"
            android:layout_width="286dp"
            android:layout_height="82dp" android:id="@+id/longlat"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="16sp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.49" android:layout_marginTop="200dp"
            android:layout_marginBottom="200dp"/>
    <TextView
            android:text="@string/temperature"
            android:layout_width="201dp"
            android:layout_height="57dp" android:id="@+id/temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/longlat" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintVertical_bias="0.334" android:layout_marginStart="1dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/minimum"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/temp_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/longlat"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.578" android:layout_marginStart="1dp" android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/temp_max"/>
    <TextView
            android:text="@string/ressenti"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/ressenti"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.217" android:layout_marginStart="1dp" android:textSize="20sp"
            android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/maximum"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/temp_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.217" android:layout_marginStart="1dp" android:textSize="20sp"
            android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/pression"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/pression"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.74" android:layout_marginStart="1dp" android:textSize="20sp"
            android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/humidite"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/humidite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ressenti" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            android:layout_marginStart="1dp" android:textSize="20sp"
            android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>